barely did shit. fixed head colors and infinite and something like that

--- a/static/base.scss
+++ b/static/base.scss
@@ -68,6 +68,7 @@ YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8
 .white { color: #fff }
 
 .chocolate {background-image:linear-gradient(to right,tomato,coral,gold,lawngreen,steelblue,blueviolet,orchid);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.almost{background-image:linear-gradient(to right,#ddd6f3,#faaca8);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 .lightgray { color: #ccc }
 .orange { color: #f60 }
 
