--- a/templates/base.html
+++ b/templates/base.html
@@ -253,7 +253,6 @@ function scrollFunction() {
         </div>
     </div>
 </div>
-{% if playedOnHypixel != False %}
 <!------ PLAYER STATS ------>
 <div class="stats">
 
@@ -328,45 +327,49 @@ function scrollFunction() {
         <b>{{swStatsDict['refill_chest_destroy']}}</b> refill chests destroyed <br>
         <b>{{swStatsDict['cosmetic_tokens']}}</b> tokens <br>
         <b>{{swStatsDict['pearls_per_game']}}</b> ender pearls thrown per game <br>
+        Corruption chance: <b>{{swStatsDict['angel_of_death_level']}}%</b><br>
 
         <!-- SW MODE -->
             {% for y, x in gamemodes.items() %}
                 {% if x['games_played'] != 0 %}
-                <button class='accordion'>{{y}}</button>
+                <button class='accordion'><b>{{y}}</b></button>
                 <div class="panel">
                     <div>
                         <p>
                             {% if x["K/D"] > 100000 %}
-                                {{username}} has an <span class='chocolate'>infinite</span> K/D
+                                {{username}} is unkillable in <b>{{y}}</b>! <br>
+                                <span class='almost'><b>infinite</b></span> K/D
                                 {% if x['W/L'] > 100000 %}
-                                    and an <span class='chocolate'>infinite</span> W/L. Awesome!
+                                    & <span class='almost'><b>infinite</b></span> W/L. Awesome!
                                 {% elif x['wlrel'] > 0 %}
-                                    and a <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>). Nice work!
+                                    & <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>). Nice work!
                                 {% elif x['wlrel'] < 0 %}
-                                    but a  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>). Nice work!
+                                    & <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>). Nice work!
                                 {% endif %}
 
                             {% elif x['kdrel'] > 0 %}
-                                {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrel']|abs }}</b> higher K/D (<span class='dark_green'>+{{ x['kdrelperc'] }}%</span>)
+                                {{username}} performs better in <b><b>{{y}}</b></b> than overall <br>
+                                <b>{{ x['kdrel']|abs }}</b> higher K/D (<span class='dark_green'>+{{ x['kdrelperc'] }}%</span>)
                                 {% if x['W/L'] > 100000 %}
-                                    and an <span class='chocolate'>infinite</span> W/L. Nice work!
+                                    & <span class='almost'><b>infinite</b></span> W/L. Nice work!
                                 {% elif x['wlrel'] > 0 %}
-                                    and a <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
+                                    & <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
                                 {% elif x['wlrel'] < 0 %}
-                                    but a  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
+                                    & <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
                                 {% endif %}
                                 
                             {% elif x['kdrel'] < 0  %}
-                                {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrel']|abs }}</b> lower K/D (<span class='red'>{{x['kdrelperc'] }}%</span>)
+                                {{username}} performs worse in <b><b>{{y}}</b></b> than overall <br>
+                                <b>{{ x['kdrel']|abs }}</b> lower K/D (<span class='red'>{{x['kdrelperc'] }}%</span>)
                                 {% if x['W/L'] > 100000 %}
-                                    and an <span class='chocolate'>infinite</span> W/L. Nice work!
+                                    & <span class='almost'><b>infinite</b></span> W/L. Nice work!
                                 {% elif x['wlrel'] > 0 %}
-                                    but a <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
+                                    & <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
                                 {% elif x['wlrel'] < 0 %}
-                                    and a  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
+                                    &  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
                                 {% endif %}
                             {% else %}
-                                {{username}} performs as average in Solo.
+                                {{username}} performs as average in <b><b>{{y}}</b></b>.
                             {% endif %}
                         </p>
                         <p>
@@ -399,38 +402,41 @@ function scrollFunction() {
         <!-- SW MODE 2-->
             {% for y, x in gamemodes2.items() %}
                 {% if x['games_played'] != 0 %}
-                <button class='accordion'>{{y}}</button>
+                <button class='accordion'><b>{{y}}</b></button>
                 <div class="panel">
                     <div>
                         <p>
                         {% if x["K/D"] > 100000 %}
-                            {{username}} has an <span class='chocolate'>infinite</span> K/D
+                            {{username}} is unkillable in <b>{{y}}</b>! <br>
+                            <span class='almost'><b>infinite</b></span> K/D
                             {% if x['W/L'] > 100000 %}
-                                and an <span class='chocolate'>infinite</span> W/L. Awesome!
+                                & <span class='almost'><b>infinite</b></span> W/L. Awesome!
                             {% elif x['wlrel'] > 0 %}
-                                and a <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>). Nice work!
+                                & <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>). Nice work!
                             {% elif x['wlrel'] < 0 %}
-                                but a  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>). Nice work!
+                                &  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>). Nice work!
                             {% endif %}
 
                         {% elif x['kdrel'] > 0 %}
-                            {{username}} performs better in {{y}} than overall, with a <b>{{ x['kdrel']|abs }}</b> higher K/D (<span class='dark_green'>+{{ x['kdrelperc'] }}%</span>)
+                            {{username}} performs better in <b>{{y}}</b> than overall <br>
+                            <b>{{ x['kdrel']|abs }}</b> higher K/D (<span class='dark_green'>+{{ x['kdrelperc'] }}%</span>)
                             {% if x['W/L'] > 100000 %}
-                                and an <span class='chocolate'>infinite</span> W/L. Nice work!
+                                & <span class='almost'><b>infinite</b></span> W/L. Nice work!
                             {% elif x['wlrel'] > 0 %}
-                                and a <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
+                                & <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
                             {% elif x['wlrel'] < 0 %}
-                                but a  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
+                                & <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
                             {% endif %}
                             
                         {% elif x['kdrel'] < 0  %}
-                            {{username}} performs worse in {{y}} than overall, with a <b>{{ x['kdrel']|abs }}</b> lower K/D (<span class='red'>{{x['kdrelperc'] }}%</span>)
+                            {{username}} performs worse in <b>{{y}}</b> than overall <br>
+                            <b>{{ x['kdrel']|abs }}</b> lower K/D (<span class='red'>{{x['kdrelperc'] }}%</span>)
                             {% if x['W/L'] > 100000 %}
-                                and an <span class='chocolate'>infinite</span> W/L. Nice work!
+                                & <span class='almost'><b>infinite</b></span> W/L. Nice work!
                             {% elif x['wlrel'] > 0 %}
-                                but a <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
+                                & <b>{{ x['wlrel']|abs }}</b> higher W/L (<span class='dark_green'>+{{ x['wlrelperc']|abs }}%</span>).
                             {% elif x['wlrel'] < 0 %}
-                                and a  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
+                                &  <b>{{ x['wlrel']|abs }}</b> lower W/L (<span class='red'>{{ x['wlrelperc'] }}%</span>).
                             {% endif %}
                         {% else %}
                             {{username}} performs as average in Solo.
@@ -622,22 +628,11 @@ function scrollFunction() {
                 responsive: true,
                 maintainAspectRatio:false,
                 data: {
-                    labels: ['Eww', 'Yucky', 'Meh', 'Decent', 'Salty', 'Tasty', 'Succulent', 'Sweet', 'Divine', 'Heavenly'],
+                    labels: ['Heavenly', 'Divine', 'Sweet', 'Succulent', 'Tasty', 'Salty', 'Decent', 'Meh', 'Yucky', 'Eww'],
                     datasets: [{
                         data: swHLO,
                         borderWidth: 1,
-                        backgroundColor: [
-                            '#808080',
-                            '#A9A9A9',
-                            '#D3D3D3',
-                            '#DACB00',
-                            '#5f5',
-                            '#00AAAA',
-                            '#FF55FF',
-                            '#AA00AA',
-                            'gold',
-                            'chocolate',
-                        ],
+                        backgroundColor: ['#a0a', '#fa0', '#5ff', '#f5f', '#0aa', '#5f5', '#ff5', '#ccc', '#aaa', '#555'],
                     }]
                 },
             });
@@ -659,22 +654,11 @@ function scrollFunction() {
                 responsive: true,
                 maintainAspectRatio:false,
                 data: {
-                    labels: ['Eww', 'Yucky', 'Meh', 'Decent', 'Salty', 'Tasty', 'Succulent', 'Sweet', 'Divine', 'Heavenly'],
+                    labels: ['Heavenly', 'Divine', 'Sweet', 'Succulent', 'Tasty', 'Salty', 'Decent', 'Meh', 'Yucky', 'Eww'],
                     datasets: [{
                         data: swHLS,
                         borderWidth: 1,
-                        backgroundColor: [
-                            '#808080',
-                            '#A9A9A9',
-                            '#D3D3D3',
-                            '#DACB00',
-                            '#5f5',
-                            '#00AAAA',
-                            '#FF55FF',
-                            '#AA00AA',
-                            'gold',
-                            'chocolate',
-                        ],
+                        backgroundColor: ['#a0a', '#fa0', '#5ff', '#f5f', '#0aa', '#5f5', '#ff5', '#ccc', '#aaa', '#555'],
                     }]
                 },
             });
@@ -696,22 +680,11 @@ function scrollFunction() {
                 responsive: true,
                 maintainAspectRatio:false,
                 data: {
-                    labels: ['Eww', 'Yucky', 'Meh', 'Decent', 'Salty', 'Tasty', 'Succulent', 'Sweet', 'Divine', 'Heavenly'],
+                    labels: ['Heavenly', 'Divine', 'Sweet', 'Succulent', 'Tasty', 'Salty', 'Decent', 'Meh', 'Yucky', 'Eww'],
                     datasets: [{
                         data: swHLT,
                         borderWidth: 1,
-                        backgroundColor: [
-                            '#808080',
-                            '#A9A9A9',
-                            '#D3D3D3',
-                            '#DACB00',
-                            '#5f5',
-                            '#00AAAA',
-                            '#FF55FF',
-                            '#AA00AA',
-                            'gold',
-                            'chocolate',
-                        ],
+                        backgroundColor: ['#a0a', '#fa0', '#5ff', '#f5f', '#0aa', '#5f5', '#ff5', '#ccc', '#aaa', '#555'],
                     }]
                 },
             });
@@ -792,19 +765,25 @@ function scrollFunction() {
             {% if bwModeStats[mode]['games_played_bedwars'][0] > 0 %}
                 <div class="h3d">{{ bwTranslateList[mode] }}</div>
                 <p>
-                    {% if bwCompList[mode]['compkd'][0] > 0 %}
+                    {% if bwCompList[mode]['compkd'][0] > 100000 %}
+                        <span class="almost"><b>infinite</b></span> K/D 
+                    {% elif bwCompList[mode]['compkd'][0] > 0 %}
                         <span class="dark_green"><b>{{bwCompList[mode]['compkd'][0]}}</b></span> higher K/D (<span class="dark_green">+{{bwCompList[mode]['compkd'][1]}}%</span>)
                     {% else %}
                         <span class="red"><b>{{bwCompList[mode]['compkd'][0]}}</b></span> lower K/D (<span class="red">{{bwCompList[mode]['compkd'][1]}}%</span>)
                     {% endif %}
                      | 
-                    {% if bwCompList[mode]['compfkd'][0] > 0 %}
+                    {% if bwCompList[mode]['compfkd'][0] > 100000 %}
+                        <span class="almost"><b>infinite</b></span> final K/D
+                    {% elif bwCompList[mode]['compfkd'][0] > 0 %}
                         <span class="dark_green"><b>{{bwCompList[mode]['compfkd'][0]}}</b></span> higher final K/D (<span class="dark_green">+{{bwCompList[mode]['compfkd'][1]}}%</span>)
                     {% else %}
                         <span class="red"><b>{{bwCompList[mode]['compfkd'][0]}}</b></span> lower final K/D (<span class="red">{{bwCompList[mode]['compfkd'][1]}}%</span>)
                     {% endif %} 
                      | 
-                    {% if bwCompList[mode]['compwl'][0] > 0 %}
+                    {% if bwCompList[mode]['compfkd'][0] > 100000 %}
+                        <span class="almost"><b>infinite</b></span> W/L
+                    {% elif bwCompList[mode]['compwl'][0] > 0 %}
                         <span class="dark_green"><b>{{bwCompList[mode]['compwl'][0]}}</b></span> higher W/L (<span class="dark_green">+{{bwCompList[mode]['compwl'][1]}}%</span>)
                     {% else %}
                         <span class="red"><b>{{bwCompList[mode]['compwl'][0]}}</b></span> lower W/L (<span class="red">{{bwCompList[mode]['compwl'][1]}}%</span>)
