MAYBE: fixed SW and BW weirdDiv formula, 404s fixed, colored seniority icons

--- a/static/base.scss
+++ b/static/base.scss
@@ -64,7 +64,7 @@ YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8
 .aqua { color: #5ff }
 .red { color: #f55 }
 .light_purple, .pink { color: #f5f }
-.yellow { color: #ff5 }
+.yellow { color: #FFD965 } // not actual yellow
 .white { color: #fff }
 
 .chocolate {background-image:linear-gradient(to right,tomato,coral,gold,lawngreen,steelblue,blueviolet,orchid);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
@@ -72,6 +72,7 @@ YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8
 .lightgray { color: #ccc }
 .orange { color: #f60 }
 .lawn {color: #708f5b}
+.yellowgreen {color: yellowgreen}
 
 .twitter{color:#1da1f2}
 .instagram{color:#c1558b}
