MAYBE: Added thousands separators, fixed seniority colors, seniority fornul, compWL bug

--- a/static/base.scss
+++ b/static/base.scss
@@ -90,7 +90,7 @@ YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8
 .nebula{background-image:linear-gradient(to right,#900,#f30,#f3f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 .thunder{background-image:linear-gradient(to right,#ff6,#fff,#666);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 .earth{background-image:linear-gradient(to right,#0f0,#070,#fa0,#ff6);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
-.water{background-image:linear-gradient(to right,#9ff,#099 #36f);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
+.water{background-image:linear-gradient(to right,aqua,teal, royalblue);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
 .fire{background-image:linear-gradient(to right,#ff3,#fa0,#800);-webkit-background-clip:text;-webkit-text-fill-color:transparent}                       
                                            
 /*           ,,                        
