--- a/templates/user404.html
+++ b/templates/user404.html
@@ -9,7 +9,8 @@
 {% endblock %}
 
 {% block content %}
-    <p>Oops! <b>{{q}}</b> doesn't exist. Try again?</p>
+    <p>{{screwup}}</p>
+    {#% if remo %#}
 <!-- <span class="water">WATER  df fdfd fd</span> <br>
 <span class="mirror">Mirrorf d dfdf df df </span><br>
 <span class="light">lightfd  dfdf df df </span><br>
