MAYBE: Unplayed modes fixed, SW Cosmetics, SW Challenge attempts, time played bug fix

--- a/templates/user404.html
+++ b/templates/user404.html
@@ -10,7 +10,7 @@
 
 {% block content %}
     {% if noAutocorrect != True %}
-        <p>Did you mean to search for <a href='/p/{{noAutocorrect}}'><b>{{noAutocorrect}}</b>?</a></p>
+        <p>Did you mean to search for <a href='/p/{{noAutocorrect}}'><b>{{noAutocorrect}}</b></a>?</p>
     {% endif %}
     <p>{{screwup}}</p>
     {#% if remo %#}
