--- a/static/base.scss
+++ b/static/base.scss
@@ -20,11 +20,11 @@ body{font-family:'Inter';text-align:center;margin:0}
 .h2d{font-size:42px;font-family:'Inconsolata',monospace;padding-top:35px;padding-bottom:35px;margin-top:-8px;color:#fff;background-color:#514f65;font-weight:normal;text-shadow:2px 2px 1px gray}
 .h3d{font-size:22px;font-family:'Inconsolata',monospace;padding-top:10px;padding-bottom:10px;margin-top:-8px;color:#fff;background-color:#727185;font-weight:normal}
 .paragraphd{margin-left:25%;margin-right:25%}
-.footerd{font-family:'Inconsolata',monospace;padding-top:15px;padding-bottom:15px;color:#fff;background-color:#514f65}
+.footerd{font-family:'Inconsolata',monospace;padding-top:15px;padding-bottom:15px;color:#fff;background-color:#514f65;bottom:0}
 .uuid{margin-bottom:0;font-size:16px;margin-top:15px;transition:.4s}
 .stats{font-family:'Inter';text-align:center}
 .desc{text-align:left}
-footer{font-family:'Inconsolata',monospace;text-align:center}
+footer{font-family:'Inconsolata',monospace;text-align:center;bottom:0}
 .table{width:auto;height:auto;max-height:65%;line-height:3em;overflow:auto;margin-top:35px;margin-bottom:35px}
 table{width:auto;margin-left:auto;margin-right:auto;border-spacing:1px 1px}
 .tabbol{width:auto;margin-left:auto;margin-right:auto;border-spacing:30px 3px;padding-top:15px}
